--- a/client/components/layout/layoutStyle.module.css
+++ b/client/components/layout/layoutStyle.module.css
@@ -116,24 +116,50 @@
 
 /* navbar  */
 
-.navbar_main {
-    /* background-color: black; */
-    background-size: cover;
-    background-position: center;
-    box-sizing: border-box;
-    font-family: sans-serif;
+
+
+
+
+
+
+
+.search_btn{
+    border: none;
+    border-radius: 233px;
+    background: #f0f2f2;
+    padding: 5px;
 }
-.menu_bar{
-    background: rgb(0,100,0);
-    text-align: center;
+.search_btn:hover{
+    border: none;
+    border-radius: 233px;
+    background:orange;
+    padding: 5px;
+    color: whitesmoke;
 }
-.menu_bar ul{
-    display: inline-flex;
-    list-style: none;
-    color: black;
+.users_btn{
+    border: none;
+    border-radius: 233px;
+    background: #f0f2f2;
+    padding: 5px;
+    margin-left: 23px;
 }
-.menu_bar ul li{
-    width: 120px;
-    margin: 15px;
-    padding: 15px;
+.users_btn:hover{
+    border: none;
+    border-radius: 233px;
+    background:orange;
+    padding: 5px;
+    color: whitesmoke;
+}
+.book_a_tour{
+    width: 134px;
+    height: 50px;
+    margin-left:107px;
+    border: none;
+    color: white;
+    font-weight: 700;
+    background-color: orange;
+}
+.book_a_tour:hover{
+    background-color: #152e4c;
+    
 }
