--- a/client/components/layout/layoutStyle.module.css
+++ b/client/components/layout/layoutStyle.module.css
@@ -116,6 +116,128 @@
 
 /* navbar  */
 
+.navber_header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 1);
+    padding: 0px 7%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navber_header .logo{
+    font-weight: bolder;
+    font-size: 25px;
+    color: #333;
+}
+.navber_header .navber ul{
+    list-style: none;
+
+}
+.navber_header .navber ul li{
+    position: relative;
+    float: left;
+}
+.navber_header .navber ul li a{
+    font-size: 20px;
+    padding: 20px;
+    color: #333;
+    display: block;
+
+}
+.navber_header .navber ul li a:hover{
+    background-color: #333;
+    color: white;
+}
+.navber_header .navber ul li ul{
+    position: absolute;
+    left: 0;
+    width: 200px;
+    background-color: white;
+    display: none;
+}
+.navber_header .navber ul li ul li {
+    width: 100%;
+    border-top: 1px solid rgba(0, 0, 0, 1);
+}
+.navber_header .navber ul li ul li ul{
+    left: 200px;
+    top: 0;
+}
+.navber_header .navber ul li:focus-within > ul ,
+.navber_header .navber ul li:hover > ul {
+    display: initial;
+}
+
+#manu_bar{
+    display: none;
+}
+.navber_header label{
+    font-size: 20px;
+    color: #333;
+    cursor: pointer;
+    display: none;
+}
+
+
+
+
+
+
+@media(max-width:991px) {
+
+    .navber_header{
+        padding: 20px;
+    }
+    .navber_header label{
+        display: initial;
+    }
+
+    .navber_header .navber{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: #ffffff;
+        border-top: 1px solid rgba(0, 0, 0, 1);
+        /* display: none; */
+    }
+
+    .navber_header .navber{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: #fff;
+        border-top: 1px solid rgba(0, 0, 0, 1);
+    }
+
+    .navber_header .navber ul li {
+        width: 100%;
+    }
+    .navber_header .navber ul li ul {
+        position: relative;
+        width: 100%;
+    }
+    .navber_header .navber ul li ul li {
+        background-color: #eee;
+    }
+    .navber_header .navber ul li ul li ul{
+        width: 100%;
+        left: 0;
+    }
+
+    #manu_bar:checked ~ .navber{
+        display: initial !important;
+    }
+
+}
+
+
+
 
 
 
